test/domains/diten/domainReassignChangeStridedness.good
domainReassignChangeStridedness.chpl:8: error: stridable mismatch in domain assignment
